# code-rag

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
mcp/: server.py
src/: _search.py  chunker.py  chunker_ast.py  config.py  embedder.py  ranker.py  summarizer.py  vector_store.py
src/api/: deps.py  main.py  schemas.py
src/api/routers/: __init__.py  admin.py  search.py
src/cli/: main.py
src/ingestor/: __init__.py  code.py  docs.py
tests/: conftest.py  test_api_admin.py  test_api_search.py  test_batch_search.py  test_batch_search_integration.py  test_chunker.py  test_chunker_ast.py  test_default_project.py  test_default_project_integration.py  test_embedder.py  test_hybrid_search.py  test_ingestor_code.py  test_ingestor_docs.py  test_ingestor_filtering.py  test_mcp_errors.py  test_project_info.py  test_ranker.py  test_search_filters.py  test_staleness.py  test_staleness_integration.py  test_vector_store.py
