[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "code-rag"
version = "1.0.0"
description = "Local-first RAG service for code and documentation indexing with vector search"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    # Embedding & ML
    "transformers>=4.48.0,<5",
    "torch>=2.1.0,<3",
    "numpy>=1.26.0,<3",
    # Redis
    "redis==5.0.1",
    "hiredis==2.2.3",
    # CLI & Ingestion
    "typer[all]==0.9.0",
    "python-dotenv==1.0.0",
    # System
    "psutil>=5.9.0",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "testcontainers==3.7.1",
]

[project.scripts]
code-rag = "src.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: mark test as integration test (requires Redis Stack)",
    "unit: mark test as unit test (no external deps)",
]
